Crea un block font y agrega las fuentes del proyecto

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -11,6 +11,9 @@ html(lang="es")
     block styles
       link(rel="stylesheet" href="/css/style.css")
       link(rel="shortcut icon" href="/public/images/favicon.png")
+    block fonts
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
     
   body
     // ----------- main header -----------  
