feat: Creara la configuracion para Ãla navegacion principal de la pagina

--- a/dev/pug/config/variables.pug
+++ b/dev/pug/config/variables.pug
@@ -11,17 +11,18 @@
       child: []
     },
     {
-      title: 'About',
-      url: 'about.html',
-      child: [
-        {
-          title: 'Subitem1',
-          url: 'subitem1.html'
-        },
-        {
-          title: 'Subitem2',
-          url: 'subitem2.html'
-        }
-      ]
+      title: 'Nosotros',
+      url: '#',
+      child: []
+    },
+    {
+      title: 'Servicios',
+      url: '#',
+      child: []
+    },
+    {
+      title: 'Ver otros negocios',
+      url: '#',
+      child: []
     }
   ]
