Añade la clase logo, la imagen logo y la descripcion del alt

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -20,7 +20,7 @@ html(lang="es")
     header.main-header
       block header
         div.main-header__block
-          image(src="/images/logox.png" alt="")
+          image.logo(src="/images/logo-white.png" alt="Logo de la página")
           div(class="main-menu-icon" id="js-menu-icon")
         nav
           include ../includes/menu
