Añade la clase de menu principal

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -22,16 +22,16 @@ html(lang="es")
         div.main-header__block
           image.logo(src="/images/logo-white.png" alt="Logo de la página")
           div(class="main-menu-icon" id="js-menu-icon")
-        nav
+        nav.main-nav
           include ../includes/menu
     
     // ----------- main -----------  
     main.main
-        block main
+      block main
     
     // ----------- main footer -----------  
     footer.main-footer
-        block footer
+      block footer
     
     block scripts
       script(src="/js/script.js")
