Crea el  diseño dela la navegación principal y la funcionalidad toggle que muestra el menu

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -20,9 +20,9 @@ html(lang="es")
     header.main-header
       block header
         div.main-header__block
-          image.logo(src="/images/logo-white.png" alt="Logo de la página")
+          img.logo(src="/images/logo-white.png" alt="Logo de la página")
           div(class="main-menu-icon" id="js-menu-icon")
-        nav.main-nav
+        nav(class="main-nav" id="js-nav")
           include ../includes/menu
     
     // ----------- main -----------  
