Cambia los textos del meta description y el nombre del sitio. Y borra una variable indefinida por la correcta.

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -7,7 +7,7 @@ html(lang="es")
     title= `${siteName} | Login Hotspot`
     meta(charset="utf-8")
     meta(name="viewport" content="initial-scale=1.0, width=device-width")
-    meta(name="description" content=pageDescription)
+    meta(name="description" content=metaDescription)
     block styles
       link(rel="stylesheet" href="/css/style.css")
       link(rel="shortcut icon" href="/public/images/favicon.png")
