--- a/dev/pug/config/variables.pug
+++ b/dev/pug/config/variables.pug
@@ -1,6 +1,6 @@
 -let pageTitle = 'Inicio'
--let siteName = 'Tienda Pepito'
--let metaDescription = 'Mi page esta muy guay, contratame 🧡'
+-let siteName = 'Inouti'.toUpperCase()
+-let metaDescription = 'Plantilla para Mikrotik | Hotspot by INUOTI 🧡'
 -let pageImage = ''
 
 -
