--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -1,6 +1,11 @@
 *,
 *::after,
 *::before { box-sizing: border-box; }
+body {
+  font-family: 'Roboto', Arial;
+  background-color: var(--color-bg);
+
+}
 img {
   display: block;
   width: 100%;
@@ -8,7 +13,7 @@ img {
   height: auto;
 }
 a { 
-  color: tomato;
+  color: var(--color-accent);
   text-decoration: none; 
 }
 h1,
@@ -16,6 +21,11 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  margin-top: 0;
+h6 { 
+  margin-top: 0; 
+  font-family: var(--font-title);
 }
+
+h1 { font-size: var(--h1-font-size); }
+h2 { font-size: var(--h2-font-size); }
+h3 { font-size: var(--h3-font-size); }
