Importa el componente menu a la page

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -1,5 +1,7 @@
 block config
   include variables
+  include ../includes/banner-mixin
+  include ../includes/form-mixin
 
 doctype html
 html(lang="es")
