--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -1,3 +1,6 @@
 extends ../config/template
 
+block main
+  +banner('', 'Inouti', 'Empresa de tecnología 100% campechana, brindamos respuestas integrales acorde a sus necesidades. Tenemos como objetivo ofrecer soluciones informáticas, dando un diagnóstico preciso y atención personalizada.')
+
 block footer
