--- a/dev/pug/includes/banner-mixin.pug
+++ b/dev/pug/includes/banner-mixin.pug
@@ -1,6 +1,6 @@
 mixin banner(image, title, description)
   .main-banner
-    img(class="main-banner__hero-image" src="/images/banner-image.jpg" alt="Banner principal")
+    img(class="main-banner__hero-image" src=image alt="Banner principal")
     .content-text
       h1(class="main-banner__title")= title.toUpperCase()
       p(class="main-banner__description")= description
