Añade la ruta a la imagen del banner

--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -1,6 +1,6 @@
 extends ../config/template
 
 block main
-  +banner('', 'Inouti', 'Empresa de tecnología 100% campechana, brindamos respuestas integrales acorde a sus necesidades. Tenemos como objetivo ofrecer soluciones informáticas, dando un diagnóstico preciso y atención personalizada.')
+  +banner('/images/banner-image.jpg', 'Inouti', 'Empresa de tecnología 100% campechana, brindamos respuestas integrales acorde a sus necesidades. Tenemos como objetivo ofrecer soluciones informáticas, dando un diagnóstico preciso y atención personalizada.')
 
 block footer
