Coloca por ensima el contenido de la image de fondo

--- a/dev/scss/components/_banner.scss
+++ b/dev/scss/components/_banner.scss
@@ -7,7 +7,7 @@
   background-color: var(--color-primary);
   border-radius: 1em;
   overflow: hidden;
-  
+  .container { position: relative; }
   &__hero-image {
     position: absolute;
     top: 0;
