--- a/dev/pug/includes/banner-mixin.pug
+++ b/dev/pug/includes/banner-mixin.pug
@@ -1,7 +1,7 @@
 mixin banner(image, title, description)
   .main-banner
     img(class="main-banner__hero-image" src=image alt="Banner principal")
-    .banner__grid
+    .banner__grid.container
       .content-text
         h1(class="main-banner__title")= title.toUpperCase()
         p(class="main-banner__description")= description
