Actualiza los estilos

--- a/dev/scss/config/_variables.scss
+++ b/dev/scss/config/_variables.scss
@@ -24,6 +24,7 @@ $color-white: #FAFAFA;
 :root {
   --font-title: Montserrat, arial;
   --font-content: roboto, arial;
+  --letter-spacing: 0.09375em; // 1.5px 
   --h1-font-size: 1.953em;
   --h2-font-size: 1.563em;
   --h3-font-size: 1.25em;
