--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -24,8 +24,19 @@ h5,
 h6 { 
   margin-top: 0; 
   font-family: var(--font-title);
+  letter-spacing: var(--letter-spacing);
 }
 
-h1 { font-size: var(--h1-font-size); }
-h2 { font-size: var(--h2-font-size); }
-h3 { font-size: var(--h3-font-size); }
+h1 { 
+  margin-top: 0;
+  margin-bottom: 1em;
+  font-size: var(--h1-font-size); 
+}
+h2 {
+  margin-top: 1.5em;
+  margin-bottom: .5em; 
+  font-size: var(--h2-font-size); }
+h3 { 
+  margin-top: 1.5em;
+  margin-bottom: .5em;
+  font-size: var(--h3-font-size); }
