Vuelve dinamica la propiedad letter-spacing

--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -6,7 +6,7 @@
 	color: #455a64;
 	background-color: #cfd8dc;
 	text-transform: uppercase;
-	letter-spacing: 2px; // pendiente de cambiar
+	letter-spacing: var(--letter-spacing); // pendiente de cambiar
 	cursor: pointer;
 	width: 100%;
 	transition: all .3s;
