--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -2,9 +2,9 @@
 *::after,
 *::before { box-sizing: border-box; }
 body {
-  font-family: 'Roboto', Arial;
   background-color: var(--color-bg);
-
+  font-family: 'Roboto', Arial;
+  font-size: var(--font-content);
 }
 img {
   display: block;
