--- a/dev/pug/includes/form-mixin.pug
+++ b/dev/pug/includes/form-mixin.pug
@@ -1,12 +1,12 @@
 mixin form(title, UserPlaceholderText, PassPlaceholderText, buttonText)
   .form
     span(class="form__title")= title.toUpperCase()
-    form
+    form(method="POST")
       div.form__input
         div.form__icon
-        input(class="input" type="text" placeholder=UserPlaceholderText required)
+        input(class="input" id="js-inputName" type="text" placeholder=UserPlaceholderText name="userName" required)
       div.form__input
         div.form__icon
-        input(class="input" type="text" placeholder=PassPlaceholderText required)
+        input(class="input" id="js-inputPass" type="text" placeholder=PassPlaceholderText name="password" required)
       input(class="button-primary" type="submit", value=buttonText)
 
