--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -24,4 +24,5 @@
 @import "components/footer";
 @import "components/banner";
 @import "components/buttons";
-@import "components/form"
+@import "components/form";
+@import "components/icons";
