--- a/dev/scss/components/_form.scss
+++ b/dev/scss/components/_form.scss
@@ -1,14 +1,14 @@
 .form {
   border-radius: .5em;
   background-color: var(--color-text);
-  padding: 2em;
+  padding: 5.5em 2em;
 
 
   form > *:first-child { margin-bottom: 1em; }
   form > *:nth-child(2) { margin-bottom: 1.5em; }
   &__title {
     display: block;
-    margin-bottom: 4.5em;
+    margin-bottom: 2.5em;
     color: #fff;
     font-size: var(--h2-font-size);
     font-family: var(--font-title);
@@ -16,23 +16,23 @@
     letter-spacing: var(--letter-spacing);
   }
   &__icon {
-    display: inline;
     padding: 1em 1.5em;
     background-color: var(--color-text2);
   }
   &__input {
+    display: flex;
     border-radius: .5em;
     padding-right: 1em;
     background-color: var(--color-bg);
     overflow: hidden;
 
-    input.input { 
+    .input { 
       border: none;
       background: transparent;
       padding-left: 1em;
       caret-color: var(--color-second);
       color: var(--color-primary);
-      width: 100%; 
+      width: 100%;
       &::placeholder { 
         color: var(--color-text); 
         opacity: .4;
