Actualiza  las clases y añade el tipo password al input de contraseña

--- a/dev/pug/includes/form-mixin.pug
+++ b/dev/pug/includes/form-mixin.pug
@@ -1,12 +1,12 @@
 mixin form(title, UserPlaceholderText, PassPlaceholderText, buttonText)
   .form
-    span(class="form__title")= title.toUpperCase()
+    span(class="form__title")= `${title.toUpperCase()}`
     form(method="POST")
-      div.form__input
-        div.form__icon.icon-user
+      div(class="form__input")
+        div.icon.icon-user
         input(class="input" id="js-inputName" type="text" placeholder=UserPlaceholderText name="userName" required)
-      div.form__input
-        div.form__icon.icon-pass
-        input(class="input" id="js-inputPass" type="text" placeholder=PassPlaceholderText name="password" required)
+      div(class="form__input")
+        div.icon.icon-pass
+        input(class="input" id="js-inputPass" type="password" placeholder=PassPlaceholderText name="userPass" required)
       input(class="button-primary" type="submit", value=buttonText)
 
