Cofigura las sobras

--- a/dev/scss/components/_header.scss
+++ b/dev/scss/components/_header.scss
@@ -8,6 +8,7 @@
   background-color: var(--color-primary);
   width: 100%;
   height: $header-height;
+  box-shadow: $shadow;
   z-index: var(--z-tooltip);
 
   &__block {
