--- a/dev/scss/components/_banner.scss
+++ b/dev/scss/components/_banner.scss
@@ -7,6 +7,7 @@
   background-color: var(--color-primary);
   border-radius: 1em;
   overflow: hidden;
+  box-shadow: $shadow;
   .container { position: relative; }
   &__hero-image {
     position: absolute;
