--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -1,4 +1,4 @@
-extends ../config/template
+extends /config/template
 
 block main
   +banner('/images/banner-image.jpg', 'Inouti', 'Empresa de tecnología 100% campechana, brindamos respuestas integrales acorde a sus necesidades. Tenemos como objetivo ofrecer soluciones informáticas, dando un diagnóstico preciso y atención personalizada.')
