Añade comentarios para identificar las partes importantes como secciones o alguno componentes

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -24,6 +24,7 @@ html(lang="es")
         div.main-header__block
           img.logo(src="/images/logo-white.png" alt="Logo de la página")
           div(class="main-menu-icon" id="js-menu-icon")
+        // ------------ main nav ------------------- 
         nav(class="main-nav" id="js-nav")
           include /includes/menu
     
