--- a/dev/pug/includes/banner-mixin.pug
+++ b/dev/pug/includes/banner-mixin.pug
@@ -1,4 +1,5 @@
 mixin banner(image, title, description)
+  // ------------ banner ----------- 
   .main-banner
     img(class="main-banner__hero-image" src=image alt="Banner principal")
     .banner__grid.container
