--- a/dev/pug/includes/form-mixin.pug
+++ b/dev/pug/includes/form-mixin.pug
@@ -1,4 +1,5 @@
 mixin form(title, UserPlaceholderText, PassPlaceholderText, buttonText)
+  // ------------ form ------------ 
   .form
     span(class="form__title")= `${title.toUpperCase()}`
     form(method="POST")
