--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -24,9 +24,7 @@ html(lang="es")
     main.main
       block main
     
-    // ----------- main footer -----------  
-    footer.main-footer
-      block footer
+    include /includes/main-footer
     
     block scripts
       script(src="/js/script.js")
