--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -1,7 +1,7 @@
 block config
   include variables
-  include /includes/banner-mixin
-  include /includes/form-mixin
+  include /mixins/banner-mixin
+  include /mixins/form-mixin
 
 doctype html
 html(lang="es")
