--- a/dev/scss/components/_icons.scss
+++ b/dev/scss/components/_icons.scss
@@ -1,5 +1,8 @@
 $color-primary: invert(66%) sepia(25%) saturate(6026%) hue-rotate(360deg) brightness(103%) contrast(105%);
 $color-white: invert(100%) sepia(0%) saturate(7500%) hue-rotate(8deg) brightness(107%) contrast(96%);
+$color-whatsapp: invert(70%) sepia(8%) saturate(7168%) hue-rotate(71deg) brightness(93%) contrast(54%);
+$color-facebook: invert(33%) sepia(70%) saturate(4356%) hue-rotate(197deg) brightness(95%) contrast(80%);
+$color-gmail: invert(32%) sepia(78%) saturate(2179%) hue-rotate(341deg) brightness(98%) contrast(96%);
 
 [class*=icon-] {
   &::before {
@@ -24,5 +27,37 @@ $color-white: invert(100%) sepia(0%) saturate(7500%) hue-rotate(8deg) brightness
     color: var(--primary-color);
     background-image: url('/images/icon-lock.svg');
     filter: $color-primary;
+  }
+}
+
+.icon-whatsapp {
+  &::before {
+    content: "";
+    background-image: url('/images/icon-whatsapp.svg');
+    filter: $color-whatsapp;
+  }
+}
+
+.icon-email {
+  &::before {
+    content: "";
+    background-image: url('/images/icon-mail.svg');
+    filter: $color-primary;
+  }
+}
+
+.icon-gmail {
+  &::before {
+    content: "";
+    background-image: url('/images/icon-gmail.svg');
+    filter: $color-gmail;
+  }
+}
+
+.icon-facebook {
+  &::before {
+    content: "";
+    background-image: url('/images/icon-facebook.svg');
+    filter: $color-facebook;
   }
 }
