Agrega los botones de contacto sociales

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -2,6 +2,7 @@ block config
   include variables
   include /mixins/banner-mixin
   include /mixins/form-mixin
+  include /mixins/button-contact-mixin
 
 doctype html
 html(lang="es")
