--- a/dev/scss/layout/_layout.scss
+++ b/dev/scss/layout/_layout.scss
@@ -1,4 +1,27 @@
+/*-----------------------*\
+    $Layout
+\*-----------------------*/
 main {
   padding: 1rem;
   padding-top: $header-height + 2;
 }
+.l-container {
+  outline: 2px dotted steelblue; // test
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  max-width: $max-width;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.l-section {
+  // outline: 2px dotted tomato; // test
+  margin-bottom: 5.5rem; // 88px
+}
+.center-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+.center-content { text-align:  center; }
