Añade la clase para separar la sección de la que viene abajo

--- a/dev/pug/mixins/banner-mixin.pug
+++ b/dev/pug/mixins/banner-mixin.pug
@@ -1,6 +1,6 @@
 mixin banner(image, title, description)
   // ------------ banner ----------- 
-  .main-banner
+  .main-banner.l-section
     img(class="main-banner__hero-image" src=image alt="Banner principal")
     .banner__grid.container
       .content-text
