--- a/dev/scss/layout/_layout.scss
+++ b/dev/scss/layout/_layout.scss
@@ -6,7 +6,7 @@ main {
   padding-top: $header-height + 2;
 }
 .l-container {
-  outline: 2px dotted steelblue; // test
+  // outline: 2px dotted steelblue; // test
   margin-left: auto;
   margin-right: auto;
   padding-left: 1rem;
