comenta una de linea usada para test

--- a/dev/scss/layout/_layout.scss
+++ b/dev/scss/layout/_layout.scss
@@ -2,7 +2,8 @@
     $Layout
 \*-----------------------*/
 main {
-  padding: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   padding-top: $header-height + 2;
 }
 .l-container {
