Corrige el error de desbordamiento de texto en los botones sociales

--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -8,7 +8,8 @@
 	text-transform: uppercase;
 	letter-spacing: var(--letter-spacing);
 	cursor: pointer;
-	width: 100%;
+  width: 100%;
+  word-break: break-all;
 	transition: all .3s;
 	&:hover { background-color: darken(#cfd8dc, 4%); }
 	&:active { transform: scale(.96); }
