Crea el componente card para servicios

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -3,6 +3,7 @@ block config
   include /mixins/banner-mixin
   include /mixins/form-mixin
   include /mixins/button-contact-mixin
+  include /mixins/card-services
 
 doctype html
 html(lang="es")
