--- a/dev/scss/components/_card.scss
+++ b/dev/scss/components/_card.scss
@@ -1,15 +1,15 @@
 // [class^=card-] { border: .05em solid black; } // test
-
 %card-style-repeat {
   border-radius: 1em;
   padding: 2em 1em;
+  transition: all .3s;
+  &:hover { transform: scale(.96); }
 }
-// Nota: limitar parrafo de car a 5 líneas y más de eso que se oculte.
+
 .card-services {
   @extend %card-style-repeat;
   text-align: center;
   background-color: var(--color-primary);
-  transition: all .3s;
 
   &__image {
     width: 10em;
@@ -21,7 +21,34 @@
     margin: 0;
     margin-bottom: 1em;
   }
-  &__text { margin: 0; }
+  &__text { 
+    display: block;
+    margin: 0; 
+  }
+}
 
-  &:hover { transform: scale(.96); }
+
+.card-business {
+  --height: 4em;
+  @extend %card-style-repeat;
+
+  &__head {
+    display: flex;
+    align-items: center;
+    margin-bottom: 2.5em;
+  }
+    &__container-icon {
+      display: flex;
+      border-radius: 1em;
+      margin-right: 1em;
+      width: var(--height);
+      height: var(--height);
+      background-color: var(--color-primary);
+    }
+    &__icon {
+      margin: auto;
+      width: 2em;
+    }
+    &__subtitle { margin: 0; }
+  &__text { margin-bottom: 1.5em; }
 }
