Crea la sección services

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -5,6 +5,7 @@ block config
   include /mixins/button-contact-mixin
   include /mixins/card-services
   include /mixins/card-business
+  include /mixins/slide-js
 
 doctype html
 html(lang="es")
