--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -5,3 +5,4 @@ block main
     +form('Hotspot login', 'Escribe tu nombre de usuario', 'Escribe tu contraseña', 'Activar internet')
   
   include /includes/section-aboutUs
+  include /includes/section-services
