--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -28,3 +28,5 @@
 @import "components/icons";
 @import "components/about-us";
 @import "components/card";
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
+@import "componentes/slide-js";
