COonfigura algunos estilos del glidejs

--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -29,4 +29,4 @@
 @import "components/about-us";
 @import "components/card";
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
-@import "componentes/slide-js";
+@import "components/slide-js";
