--- a/dev/scss/components/_icons.scss
+++ b/dev/scss/components/_icons.scss
@@ -1,4 +1,5 @@
 $color-primary: invert(66%) sepia(25%) saturate(6026%) hue-rotate(360deg) brightness(103%) contrast(105%);
+$color-second: invert(45%) sepia(87%) saturate(2573%) hue-rotate(5deg) brightness(98%) contrast(100%);
 $color-white: invert(100%) sepia(0%) saturate(7500%) hue-rotate(8deg) brightness(107%) contrast(96%);
 $color-whatsapp: invert(70%) sepia(8%) saturate(7168%) hue-rotate(71deg) brightness(93%) contrast(54%);
 $color-facebook: invert(33%) sepia(70%) saturate(4356%) hue-rotate(197deg) brightness(95%) contrast(80%);
@@ -15,6 +16,16 @@ $color-gmail: invert(32%) sepia(78%) saturate(2179%) hue-rotate(341deg) brightne
       min-width: 1.5em;
       min-height: 1.5em;
       filter: $color-white;
+  } 
+}
+.icon-arrow-left {
+  @include addIcon('/images/icon-arrow-back.svg', $color-second) {
+    margin-right: 0;
+  }
+}
+.icon-arrow-right {
+  @include addIcon('/images/icon-arrow-right.svg', $color-second) {
+    margin-right: 0;
   }
 }
 .icon-user {
