AÃñade archivos faltantes en el  anterior commit

--- a/dev/pug/mixins/slide-js.pug
+++ b/dev/pug/mixins/slide-js.pug
@@ -8,5 +8,5 @@ mixin glide(cards)
           li.glide__slide: +cardServices(card.imgSVG, card.title, card.text)
     // ---------- glide controls --------------- 
     div(class="glide__arrows" data-glide-el="controls")
-      button(class="glide__arrow  glide__arrow--left" data-glide-dir="<") < Start
-      button(class="glide__arrow  glide__arrow--right" data-glide-dir=">") End >
+      button(class="glide__arrow  glide__arrow--left button  icon-arrow-left" data-glide-dir="<" type="button")
+      button(class="glide__arrow  glide__arrow--right  button  icon-arrow-right" data-glide-dir=">" type="button")
