Añade estilos faltastes a la sección  de servicios

--- a/dev/pug/includes/section-services.pug
+++ b/dev/pug/includes/section-services.pug
@@ -1,6 +1,6 @@
 // ------------ Section services ---------------- 
 section(class="services  l-section")
-  h2.services__subtitle= 'Servicios'.toUpperCase()
+  h2(class="services__subtitle  center-content")= 'Servicios'.toUpperCase()
   +glide([
     { 
       imgSVG: 'section-service-software', 
