--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -21,12 +21,13 @@
 \--------------------------*/
 @import "components/header";
 @import "components/menu";
-@import "components/footer";
 @import "components/banner";
+@import "components/about-us";
+@import "components/services";
+@import "components/footer";
 @import "components/buttons";
 @import "components/form";
 @import "components/icons";
-@import "components/about-us";
 @import "components/card";
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 @import "components/slide-js";
