--- a/dev/pug/includes/section-services.pug
+++ b/dev/pug/includes/section-services.pug
@@ -18,7 +18,7 @@ section(class="services  l-section")
       text: 'Diseño y construcción de sitios web con un "look and feel" genérico y exclusivo para su empresa.'
     },
     {
-      imgSVG: 'section-service-software', 
+      imgSVG: 'section-service-red', 
       title: 'Instalación de redes LAN', 
       text: 'Instalación de cableado con presupuesto exclusivo para su empresa.'
     }
