Actualiza los archivos

--- a/dev/pug/includes/section-services.pug
+++ b/dev/pug/includes/section-services.pug
@@ -3,22 +3,22 @@ section(class="services  l-section")
   h2(class="services__subtitle  center-content")= 'Servicios'.toUpperCase()
   +glide([
     { 
-      imgSVG: 'section-service-software', 
+      nameFile: 'software', 
       title: 'Soporte a usuarios y equipos', 
       text: 'Incidencias relacionadas con problemas de configuración, bloqueo, mal funcionamiento del sistema operativo (Windows), aplicaciones, correo electrónico, navegadores, sistemas antivirus, etc.'
     },
     {
-      imgSVG: 'section-service-hardware', 
+      nameFile: 'hardware', 
       title: 'Mantenimiento del equipo de cómputo', 
       text: 'Ofrecemos un plan de mantenimiento preventivo y soporte correctivo de sus computadoras, servidores, impresoras etc.'
     },
     {
-      imgSVG: 'section-service-code',
+      nameFile: 'code',
       title: 'Diseño y desarrollo web',
       text: 'Diseño y construcción de sitios web con un "look and feel" genérico y exclusivo para su empresa.'
     },
     {
-      imgSVG: 'section-service-red', 
+      nameFile: 'red', 
       title: 'Instalación de redes LAN', 
       text: 'Instalación de cableado con presupuesto exclusivo para su empresa.'
     }
