--- a/dev/pug/mixins/card-services.pug
+++ b/dev/pug/mixins/card-services.pug
@@ -1,5 +1,5 @@
-mixin cardServices(imgSVG, title, description)
+mixin cardServices(name, title, description)
   div.card-services.b-shadow
-    img(class="card-services__image" src=`/images/${imgSVG}.svg` alt="Imagen, servicios de soporte a usuarios y equipos.")
+    img(class="card-services__image" src=`/images/section-service-${name}.svg` alt="Imagen, servicios de soporte a usuarios y equipos.")
     h3.card-services__subtitle= title
     p(class="card-services__text" id="js-textClamp")= description
