--- a/dev/pug/mixins/slide-js.pug
+++ b/dev/pug/mixins/slide-js.pug
@@ -4,8 +4,8 @@ mixin glide(cards)
     // ------- glide items ----------------- 
     div(class="glide__track" data-glide-el="track")
       ul.glide__slides
-        each card in cards
-          li.glide__slide: +cardServices(card.nameFile, card.title, card.text)
+        each card, id in cards
+          li.glide__slide: +cardServices(id, card.nameFile, card.title, card.text)
     // ---------- glide controls --------------- 
     div(class="glide__arrows" data-glide-el="controls")
       button(class="glide__arrow  glide__arrow--left button  icon-arrow-left" data-glide-dir="<" type="button")
