--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -14,6 +14,7 @@ html(lang="es")
     meta(charset="utf-8")
     meta(name="viewport" content="initial-scale=1.0, width=device-width")
     meta(name="description" content=metaDescription)
+    meta(name="theme-color" content=metaColor)
     block styles
       link(rel="stylesheet" href="/css/style.css")
       link(rel="shortcut icon" href="/public/images/favicon.png")
