--- a/dev/pug/config/variables.pug
+++ b/dev/pug/config/variables.pug
@@ -2,6 +2,7 @@
 -let siteName = 'Inouti'.toUpperCase()
 -let metaDescription = `Plantilla para Mikrotik | Hotspot by ${siteName} 🧡`
 -let pageImage = ''
+-let metaColor = '#FF9800'
 
 -
   let pages = [
