Configura el icon link

--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -21,6 +21,7 @@ html(lang="es")
     block fonts
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
+      <link rel="icon" href="/images/logo-white.png">
     
   body
     include /includes/main-header
