Crea la sección de ads o negocios. Y configura el glide y lo optimiza para la sección de servicios y ads

--- a/dev/pug/includes/section-services.pug
+++ b/dev/pug/includes/section-services.pug
@@ -22,4 +22,4 @@ section(class="services  l-section")
       title: 'Instalación de redes LAN', 
       text: 'Instalación de cableado con presupuesto exclusivo para su empresa.'
     }
-  ])
+  ], 'services', 'js-glide-services')
