--- a/dev/pug/mixins/card-business.pug
+++ b/dev/pug/mixins/card-business.pug
@@ -1,10 +1,10 @@
-mixin cardAdsBusiness(nameBusiness, logoAndExtension, text, buttonContact)
-  div.card-business
+mixin cardAdsBusiness(id, nameBusiness, logoAndExtension, description, buttonContact)
+  div.card-business#js-card-business
     div.card-business__head
       div.card-business__container-icon.b-shadow
         img(class="card-business__icon" src=`/images/logo-business-${logoAndExtension}` alt="logo del negocio")
       h3.card-business__subtitle= nameBusiness
-    p.card-business__text#js-textClamp2= text
+    p(class="card-business__text" id=`js-business${id}`)= description
     +buttonContact(buttonContact.class, buttonContact.icon, buttonContact.text)
 
 //- Example: El parametro "buttonContact" recibe un object
