--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -24,6 +24,7 @@
 @import "components/banner";
 @import "components/about-us";
 @import "components/services";
+@import "components/ads-business";
 @import "components/footer";
 @import "components/buttons";
 @import "components/form";
