--- a/dev/pug/includes/main-footer.pug
+++ b/dev/pug/includes/main-footer.pug
@@ -4,11 +4,14 @@ footer.main-footer.b-shadow
     h2(class="main-footer__subtitle  center-content")= `Soporte ${siteName}`.toUpperCase()
     
     div.main-footer__contact
-      h3= 'Contactos'.toUpperCase()
-    
+      h3= 'Contactanos'.toUpperCase()
+      +buttonContact('button-social-secondary', 'icon-whatsapp-white', '+52 981 2345678')
+      +buttonContact('button-social-secondary', 'icon-mail-white', 'inoutisolucionesti@gmail.com')
+
     div.main-footer__socialnetworks
       h3= 'En redes'.toUpperCase()
-    
+      +buttonContact('button-social-secondary', 'icon-facebook-white', '@inoutisoluciones')
+
     div.main-footer__services
       h3= 'Nuestros Servicios'.toUpperCase()
       ul
