--- a/dev/scss/components/_footer.scss
+++ b/dev/scss/components/_footer.scss
@@ -36,7 +36,7 @@
       margin-right: auto;
       padding-left: 0;
       text-align: left; 
-      width: 85%;
+      width: 16em;
       li {
         color: var(--color-white);
         list-style-type: none;
