Crea el mixin para RWD. y modifica los tmamños de fuentes para pantallas más grandes.

--- a/dev/scss/config/_mixins.scss
+++ b/dev/scss/config/_mixins.scss
@@ -13,3 +13,15 @@
     filter: $color;
   }
 }
+
+@mixin from($breakPoint) {
+  @if map-has-key($breakPoints, $breakPoint) {
+    @media screen and (min-width: map_get($breakPoints, $breakPoint)) {
+      @content;
+    }
+  } @else {
+    @media screen and (min-width: $breakPoint) {
+      @content;
+    }
+}
+}
