--- a/dev/pug/includes/section-business.pug
+++ b/dev/pug/includes/section-business.pug
@@ -3,7 +3,7 @@ section.business.l-section
   h2(class="business__subtitle  center-content")= 'Otros negocios (example ads)'.toUpperCase()
   +glide([
     {
-      businessName: 'Twitch',
+      businessName: 'Item 1',
       logoAndExtension: 'money.png',
       description: 'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe qui in quas nam, magni porro itaque quam laboriosam quos architecto sed voluptates quia cum eveniet minima quis suscipit repellendus sunt!',
       cardAttributes: {
@@ -13,7 +13,7 @@ section.business.l-section
       }
     },
     {
-      businessName: 'Tienda Pepito',
+      businessName: 'Item 2',
       logoAndExtension: 'puer.png',
       description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque maiores alias saepe possimus neque qui ad eius in aliquid voluptates cupiditate, eveniet molestiae illum dignissimos. Odio consequuntur dolor ipsam iure.',
       cardAttributes: {
@@ -23,13 +23,43 @@ section.business.l-section
       }
     },
     {
-      businessName: 'LinkedIn',
+      businessName: 'Item 3',
       logoAndExtension: 'money.png',
       description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque maiores alias saepe possimus neque qui ad eius in aliquid voluptates cupiditate, eveniet molestiae illum dignissimos. Odio consequuntur dolor ipsam iure.',
       cardAttributes: {
         class: 'button-facebook', 
         icon: 'icon-facebook',
         text: '@linkedin'
+      }
+    },
+    {
+      businessName: 'item 4',
+      logoAndExtension: 'puer.png',
+      description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque maiores alias saepe possimus.',
+      cardAttributes: {
+        class: 'button-gmail', 
+        icon: 'icon-gmail',
+        text: 'item-4@gmail.com'
+      }
+    },
+    {
+      businessName: 'item 5',
+      logoAndExtension: 'money.png',
+      description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque maiores alias saepe possimus. Atque maiores alias saepe possimus.',
+      cardAttributes: {
+        class: 'button-mail', 
+        icon: 'icon-mail',
+        text: 'item-5@hotmail.com'
+      }
+    },
+    {
+      businessName: 'item 6',
+      logoAndExtension: 'puer.png',
+      description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque maiores alias saepe possimus. Atque maiores alias saepe possimus. Atque maiores alias saepe possimus.',
+      cardAttributes: {
+        class: 'button-whatsapp', 
+        icon: 'icon-whatsapp',
+        text: '+52 981 123 3467'
       }
     }
   ], 'business', 'js-glide-business')
