--- a/dev/scss/components/_slide-js.scss
+++ b/dev/scss/components/_slide-js.scss
@@ -1,10 +1,7 @@
-.glide {
-  // outline: 1px solid tomato;
-  // > * { outline: 1px solid steelblue; }
-  
+.glide {  
   &__track {}
   &__slides {} // este elemento pone el margin que separa los bottones.
-    &__slide {}
+    &__slide { height: initial !important; }
   &__arrows { 
     display: flex;
     justify-content: space-between;
@@ -14,7 +11,6 @@
     &__arrow { 
       flex-basis: 10%;
       background-color: var(--color-text2); 
-
       &:hover { background-color: var(--color-white) }
     }
     &__arrow--left {}
