Modifica los margenes y se colocan en una clase global.

--- a/dev/pug/includes/main-footer.pug
+++ b/dev/pug/includes/main-footer.pug
@@ -1,5 +1,5 @@
 // ----------- main footer -----------  
-footer.main-footer.b-shadow
+footer.main-footer.l-section.shadow
   div.container.center-content
     h2(class="main-footer__subtitle  center-content")= `Soporte ${siteName}`.toUpperCase()
     
